--- a/changePic/style.css
+++ b/changePic/style.css
@@ -51,6 +51,6 @@ html{
     border: 2px solid lightseagreen;
     color:lightseagreen;
     padding: 10px;
-    border-radius: 999%;
+    border-radius: 999px;
     opacity: 0.8;
 }
